# vnetemplate

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODING_GUIDELINES.md  CONTRIBUTING.md  README.md  release-please-config.json
.copilot/: coding-guidelines.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/instructions/: test-review.instructions.md
.github/workflows/: build-reusable.yml  ci.yml  codeql.yml  delete-merged-branch.yml  release-please.yml
docs/vertexnova/template/: template.md
docs/vertexnova/template/diagrams/: architecture.drawio
examples/: README.md
examples/01_hello_template/: CMakeLists.txt  main.cpp
include/vertexnova/template/: template.h
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1  build_windows.py  build_windows.sh  format.sh  generate-docs.sh
src/: CMakeLists.txt
